--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-ui-scrollspy": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
